--- a/CRUD_Storage.html
+++ b/CRUD_Storage.html
@@ -27,15 +27,21 @@
 	
 					<label for="txtEmail">Email:</label>
 					<input type="text" id="txtEmail" required/><br>
-	
-					<label for="txtStatus">Status:</label>
-					<input type="text" id="txtStatus" disabled /><br>
-	
+		
 					<label for="txtDtCad">Data Cadastro:</label>
 					<input type="date" id="txtDtCad" required /><br>
 	
 					<label for="txtHora">Hora Cadastro:</label>
 					<input type="time" id="txtHora"  /><br>
+					<label for="curso">Escolha um curso:</label>
+
+						<select name="curso" id="curso">
+							<option value="java">Java</option>
+							<option value="javas">JavaScript</option>
+							<option value="banco">Banco de dados</option>
+							<option value="html">HTML</option>
+							<option value="nodejs">Nodejs</option>
+						</select>
 	
 					<input type="submit" value="Salvar" id="btnSalvar"/>
 		</form>
