--- a/CRUD_Storage.html
+++ b/CRUD_Storage.html
@@ -41,7 +41,7 @@
 					<label for="txtHora">Hora Realização:</label>
 					<input type="time" id="txtHoraRealizacao"  /><br>
 
-					<label for="curso">Escolha um curso:</label>
+					<label for="curso">Escolha um curso:</label> <br>
 						<select name="curso" id="curso">
 							<option value="Java">Java</option>
 							<option value="Javascript">JavaScript</option>
