--- a/CRUD_Storage.html
+++ b/CRUD_Storage.html
@@ -16,7 +16,7 @@
 			
 			<!-- Formulário para cadastro dos clientes -->
 		<form id="frmCadastro">
-			<h1>Formulário de cadastro</h1>
+			<h2>Formulário de cadastro</h2>
 					<label for="txtCodigo">RM:</label>
 					<input type="text" id="txtCodigo"/><br>
 	
@@ -55,7 +55,7 @@
 		</div>
 <!-- Tabela para listar os clientes com possibilidade de alterar/excluir -->
 <div class="tabela">
-	<h1>Registros</h1>
+	<h2 style="color: white; text-align: center">Registros</h2>
 	<table id="tblListar" border="1"></table>
 	<p id="prgfrm"></p>
 </div>
